# draw

./: .gitignore  CMakeLists.txt  README.md  appresources  draw  draw.css  quickbuild.sh
cmake/: .GSettings.cmake.swp  .README.swp  .Translations.cmake.swp
resources/: app.css  app.gresource.xml  default_palette
src/: AppToolbar.vala  AppWindow.vala  CMakeLists.txt  main.vala
src/Core/: Canvas.vala  Image.vala  Palette.vala
src/Views/: ActionToolbar.vala  Canvas.vala  CanvasContainer.vala  ColorTools.vala  DrawTools.vala  NewFile.vala  NewImage.vala  StatusToolbar.vala  ToolsPane.vala  Welcome.vala  Window.vala  WindowToolbar.vala  Workspace.vala
src/Views/ActionViews/: ColorTools.vala  DrawTools.vala
src/Views/Tools/: Brush.vala  Tool.vala
src/Widgets/: ColorIcon.vala  Toolbar.vala  Tools.vala
